Добавлены новые фотки

--- a/index.html
+++ b/index.html
@@ -10,42 +10,50 @@
   </head>
   <body class="page__body">
     <main>
-      <section class="gallary">
+      <section class="gallery">
         <div class="container">
-          <div class="gallary__container" id="lightgallery">
-            <a href="optimized/0.jpg" class="div0"><img src="optimized/0prev.jpg" alt="" /></a>
-            <a href="optimized/1.jpg" class="div1"><img src="optimized/1prev.jpg" alt="" /></a>
-            <a href="optimized/2.jpg" class="div2"><img src="optimized/2prev.jpg" alt="" /></a>
-            <a href="optimized/3.jpg" class="div3"><img src="optimized/3prev.jpg" alt="" /></a>
-            <a href="optimized/4.jpg" class="div4"><img src="optimized/4prev.jpg" alt="" /></a>
-            <a href="optimized/5.jpg" class="div5"><img src="optimized/5prev.jpg" alt="" /></a>
-            <a href="optimized/6.jpg" class="div6"><img src="optimized/6prev.jpg" alt="" /></a>
-            <a href="optimized/7.jpg" class="div7"><img src="optimized/7prev.jpg" alt="" /></a>
-            <a href="optimized/8.jpg" class="div8"><img src="optimized/8prev.jpg" alt="" /></a>
-            <a href="optimized/9.jpg" class="div9"><img src="optimized/9prev.jpg" alt="" /></a>
-            <a href="optimized/10.jpg" class="div10"><img src="optimized/10prev.jpg" alt="" /></a>
-            <a href="optimized/11.jpg" class="div11"><img src="optimized/11prev.jpg" alt="" /></a>
-            <a href="optimized/12.jpg" class="div12"><img src="optimized/12prev.jpg" alt="" /></a>
-            <a href="optimized/13.jpg" class="div13"><img src="optimized/13prev.jpg" alt="" /></a>
-            <a href="optimized/14.jpg" class="div14"><img src="optimized/14prev.jpg" alt="" /></a>
-            <a href="optimized/15.jpg" class="div15"><img src="optimized/15prev.jpg" alt="" /></a>
-            <a href="optimized/16.jpg" class="div16"><img src="optimized/16prev.jpg" alt="" /></a>
-            <a href="optimized/17.jpg" class="div17"><img src="optimized/17prev.jpg" alt="" /></a>
-            <a href="optimized/18.jpg" class="div18"><img src="optimized/18prev.jpg" alt="" /></a>
-            <a href="optimized/19.jpg" class="div19"><img src="optimized/19prev.jpg" alt="" /></a>
-            <a href="optimized/20.jpg" class="div20"><img src="optimized/20prev.jpg" alt="" /></a>
-            <a href="optimized/21.jpg" class="div21"><img src="optimized/21prev.jpg" alt="" /></a>
-            <a href="optimized/22.jpg" class="div22"><img src="optimized/22prev.jpg" alt="" /></a>
-            <a href="optimized/23.jpg" class="div23"><img src="optimized/23prev.jpg" alt="" /></a>
-            <a href="optimized/24.jpg" class="div24"><img src="optimized/24prev.jpg" alt="" /></a>
-            <a href="optimized/25.jpg" class="div25"><img src="optimized/25prev.jpg" alt="" /></a>
-            <a href="optimized/26.jpg" class="div26"><img src="optimized/26prev.jpg" alt="" /></a>
-            <a href="optimized/27.jpg" class="div27"><img src="optimized/27prev.jpg" alt="" /></a>
-            <a href="optimized/28.jpg" class="div28"><img src="optimized/28prev.jpg" alt="" /></a>
-            <a href="optimized/29.jpg" class="div29"><img src="optimized/29prev.jpg" alt="" /></a>
-            <a href="optimized/30.jpg" class="div30"><img src="optimized/30prev.jpg" alt="" /></a>
-            <a href="optimized/31.jpg" class="div31"><img src="optimized/31prev.jpg" alt="" /></a>
-            <a href="optimized/32.jpg" class="div32"><img src="optimized/32prev.jpg" alt="" /></a>
+          <div class="gallery__container" id="lightgallery">
+            <a href="optimized/d1.jpg" class="gallery__item"><img src="optimized/d1prev.jpg" alt="" /></a>
+            <a href="optimized/d2.jpg" class="gallery__item"><img src="optimized/d2prev.jpg" alt="" /></a>
+            <a href="optimized/d3.jpg" class="gallery__item"><img src="optimized/d3prev.jpg" alt="" /></a>
+            <a href="optimized/d4.jpg" class="gallery__item"><img src="optimized/d4prev.jpg" alt="" /></a>
+            <a href="optimized/d5.jpg" class="gallery__item"><img src="optimized/d5prev.jpg" alt="" /></a>
+            <a href="optimized/d6.jpg" class="gallery__item"><img src="optimized/d6prev.jpg" alt="" /></a>
+            <a href="optimized/d7.jpg" class="gallery__item"><img src="optimized/d7prev.jpg" alt="" /></a>
+            <a href="optimized/d8.jpg" class="gallery__item"><img src="optimized/d8prev.jpg" alt="" /></a>
+            <a href="optimized/d9.jpg" class="gallery__item"><img src="optimized/d9prev.jpg" alt="" /></a>
+            <a href="optimized/0.jpg" class="gallery__item"><img src="optimized/0prev.jpg" alt="" /></a>
+            <a href="optimized/1.jpg" class="gallery__item"><img src="optimized/1prev.jpg" alt="" /></a>
+            <a href="optimized/2.jpg" class="gallery__item"><img src="optimized/2prev.jpg" alt="" /></a>
+            <a href="optimized/3.jpg" class="gallery__item"><img src="optimized/3prev.jpg" alt="" /></a>
+            <a href="optimized/4.jpg" class="gallery__item"><img src="optimized/4prev.jpg" alt="" /></a>
+            <a href="optimized/5.jpg" class="gallery__item"><img src="optimized/5prev.jpg" alt="" /></a>
+            <a href="optimized/6.jpg" class="gallery__item"><img src="optimized/6prev.jpg" alt="" /></a>
+            <a href="optimized/7.jpg" class="gallery__item"><img src="optimized/7prev.jpg" alt="" /></a>
+            <a href="optimized/8.jpg" class="gallery__item"><img src="optimized/8prev.jpg" alt="" /></a>
+            <a href="optimized/9.jpg" class="gallery__item"><img src="optimized/9prev.jpg" alt="" /></a>
+            <a href="optimized/10.jpg" class="gallery__item"><img src="optimized/10prev.jpg" alt="" /></a>
+            <a href="optimized/11.jpg" class="gallery__item"><img src="optimized/11prev.jpg" alt="" /></a>
+            <a href="optimized/12.jpg" class="gallery__item"><img src="optimized/12prev.jpg" alt="" /></a>
+            <a href="optimized/13.jpg" class="gallery__item"><img src="optimized/13prev.jpg" alt="" /></a>
+            <a href="optimized/15.jpg" class="gallery__item"><img src="optimized/15prev.jpg" alt="" /></a>
+            <a href="optimized/16.jpg" class="gallery__item"><img src="optimized/16prev.jpg" alt="" /></a>
+            <a href="optimized/17.jpg" class="gallery__item"><img src="optimized/17prev.jpg" alt="" /></a>
+            <a href="optimized/18.jpg" class="gallery__item"><img src="optimized/18prev.jpg" alt="" /></a>
+            <a href="optimized/19.jpg" class="gallery__item"><img src="optimized/19prev.jpg" alt="" /></a>
+            <a href="optimized/20.jpg" class="gallery__item"><img src="optimized/20prev.jpg" alt="" /></a>
+            <a href="optimized/21.jpg" class="gallery__item"><img src="optimized/21prev.jpg" alt="" /></a>
+            <a href="optimized/22.jpg" class="gallery__item"><img src="optimized/22prev.jpg" alt="" /></a>
+            <a href="optimized/23.jpg" class="gallery__item"><img src="optimized/23prev.jpg" alt="" /></a>
+            <a href="optimized/24.jpg" class="gallery__item"><img src="optimized/24prev.jpg" alt="" /></a>
+            <a href="optimized/25.jpg" class="gallery__item"><img src="optimized/25prev.jpg" alt="" /></a>
+            <a href="optimized/26.jpg" class="gallery__item"><img src="optimized/26prev.jpg" alt="" /></a>
+            <a href="optimized/27.jpg" class="gallery__item"><img src="optimized/27prev.jpg" alt="" /></a>
+            <a href="optimized/28.jpg" class="gallery__item"><img src="optimized/28prev.jpg" alt="" /></a>
+            <a href="optimized/29.jpg" class="gallery__item"><img src="optimized/29prev.jpg" alt="" /></a>
+            <a href="optimized/30.jpg" class="gallery__item"><img src="optimized/30prev.jpg" alt="" /></a>
+            <a href="optimized/31.jpg" class="gallery__item"><img src="optimized/31prev.jpg" alt="" /></a>
+            <a href="optimized/32.jpg" class="gallery__item"><img src="optimized/32prev.jpg" alt="" /></a>
           </div>
         </div>
       </section>
