Удалил 1 фотку, поправил сетку

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="optimized/d9.jpg" class="gallery__item"><img src="optimized/d9prev.jpg" alt="" /></a>
             <a href="optimized/0.jpg" class="gallery__item"><img src="optimized/0prev.jpg" alt="" /></a>
             <a href="optimized/1.jpg" class="gallery__item"><img src="optimized/1prev.jpg" alt="" /></a>
-            <a href="optimized/2.jpg" class="gallery__item"><img src="optimized/2prev.jpg" alt="" /></a>
+            <!-- <a href="optimized/2.jpg" class="gallery__item"><img src="optimized/2prev.jpg" alt="" /></a> -->
             <a href="optimized/3.jpg" class="gallery__item"><img src="optimized/3prev.jpg" alt="" /></a>
             <a href="optimized/4.jpg" class="gallery__item"><img src="optimized/4prev.jpg" alt="" /></a>
             <a href="optimized/5.jpg" class="gallery__item"><img src="optimized/5prev.jpg" alt="" /></a>
